@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2006, 2013, Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2006, 2015, Oracle and/or its affiliates. All rights reserved.
 #
 
 
@@ -9,14 +9,15 @@ OpenGrok - a wicked fast source browser
 1.  Introduction
 2.  Requirements
 3.  Usage
-4.  OpenGrok setup
-5.  Optional Command Line Interface Usage
-6.  Change web application properties or name
-7.  OpenGrok systray
-8.  Information for developers
-9.  Tuning OpenGrok for large code bases
-10.  Authors
-11. Contact us
+4.  OpenGrok install
+5.  OpenGrok setup
+6.  Optional Command Line Interface Usage
+7.  Change web application properties or name
+8.  OpenGrok systray
+9.  Information for developers
+10. Tuning OpenGrok for large code bases
+11. Authors
+12. Contact us
 
 
 1. Introduction
@@ -25,7 +26,8 @@ OpenGrok - a wicked fast source browser
 OpenGrok is a fast and usable source code search and cross reference
 engine, written in Java. It helps you search, cross-reference and navigate
 your source tree. It can understand various program file formats and
-version control histories like SCCS, RCS, CVS, Subversion, Mercurial etc.
+version control histories like Mercurial, Git, SCCS, RCS, CVS, Subversion,
+Teamware, ClearCase, Perforce, Monotone and Bazaar.
 
 Offical page of the project is on:
 
@@ -34,21 +36,22 @@ Offical page of the project is on:
 2. Requirements
 ---------------
 
-    * Latest Java (At least 1.7)
+    * Latest Java (At least 1.8)
       http://www.oracle.com/technetwork/java/
-    * A servlet container like Tomcat (7.x or later)
-      supporting Servlet 2.4 and JSP 2.0
+    * A servlet container like Tomcat (8.x or later)
+      supporting Servlet 2.5 and JSP 2.1
       http://tomcat.apache.org/
-    * Exuberant Ctags
+    * Exuberant Ctags or Universal Ctags
       http://ctags.sourceforge.net/
+      http://github.io/uctags
     * Source Code Management installation
       depending on type of repositories indexed
     * If you want to build OpenGrok:
-      - Ant (1.8 and later)
+      - Ant (1.9.4 and later)
         http://ant.apache.org/
       - JFlex
         http://www.jflex.de/
-      - Netbeans (optional, at least 7.4, will need Ant 1.8.1)
+      - Netbeans (optional, at least 8.0, will need Ant 1.9.4)
         http://netbeans.org/
 
 3. Usage
@@ -89,13 +92,36 @@ Each of these directories was created with 'cvs checkout' command (with
 appropriate arguments to get given branch) and will be treated by OpenGrok
 as a project.
 
-4. OpenGrok setup
+
+4. OpenGrok install
+-----------------
+
+4.1 Installing on Solaris from *.p5p file
+-----------------
+
+4.1.0 Install
+-----------------
+
+The file <package_name>.p5p you can easily use as a new publisher for the pkg command.
+
+  # pkg install --no-refresh -g /path/to/file/<package_name>.p5p opengrok
+
+
+4.1.1 Update
+-----------------
+
+You can also update OpenGrok software with the *.p5p file by running a command
+
+  # pkg update --no-refresh -g /path/to/file/<package_name>.p5p 'pkg://<publisher>/*'
+
+
+5. OpenGrok setup
 -----------------
 
 To setup OpenGrok it is needed to prepare the source code, let OpenGrok index
 it and start the web application.
 
-4.1 Setting up the sources
+5.1 Setting up the sources
 --------------------------
 
 Source base should be available locally for OpenGrok to work efficiently.
@@ -123,13 +149,13 @@ If you want to skip indexing the history of a particular directory
 at the root of that directory.
 
 
-4.2 Using Opengrok wrapper script to create indexes
----------------------------------------------------
+5.2 Using Opengrok shell wrapper script to create indexes
+---------------------------------------------------------
 
 For *nix systems there is a shell script called OpenGrok which simplifies most
 of the tasks. It has been tested on Solaris and Linux distributions.
 
-4.2.1 - Deploy the web application
+5.2.1 - Deploy the web application
 ----------------------------------
 
 First please change to opengrok directory where the OpenGrok shell script is
@@ -157,7 +183,7 @@ available to user running opengrok with all permissions. In root user case
 it will create all the directories needed, otherwise you have to manually
 create the directory and grant all permissions to the user used.
 
-4.2.2 - Populate DATA_ROOT Directory
+5.2.2 - Populate DATA_ROOT Directory
 ------------------------------------
 
 During this process the indexer will generate OpenGrok XML configuration file
@@ -221,7 +247,64 @@ OPENGROK_CONFIGURATION environment variable to point to it. Obviously such
 setups can be used for nightly cron job updates of index or other automated
 purposes.
 
-4.3 Using SMF service (Solaris) to maintain OpenGrok indexes
+5.2.3 Partial reindex
+---------------------
+
+There is inherent time window between after the source code is updated
+(highlighted in step 5.1 above) and before indexer completes. During this
+time window the index does not match the source code. To alleviate this
+limitation, one can kick off update of all source repositories in
+parallel and once all the mirroring completes perform complete reindex.
+This does not really help in case when some of the source code
+repositories are slow to sync, e.g. because the latency to their origin is
+significant, because the overall mirroring process has to wait for all the
+projects to finish syncing before running the indexer. To overcome this
+limitation, the index of each project can be created just after the
+mirroring of this project finishes.
+
+Thus, the overall approach would be:
+
+  1. create initial index of all the source code
+
+     This will produce configuration.xml, optionally by combining the
+     discovered projects with read-only configuration (as specified
+     with READ_XML_CONFIGURATION). This step has to be performed only once
+     - during the initial OpenGrok setup.
+
+  2. mirror and index all projects in parallel
+
+     This is done by running indexpart command of the OpenGrok script and
+     specifying the configuration.xml written in previous step as
+     READ_XML_CONFIGURATION. The configuration will help the indexer to
+     discover source/data root and project to source path mapping.
+
+  3. perform complete reindex (like in step 1)
+
+     Once all the pre-existing projects are mirrored and indexed, run full
+     indexer to discover projects which have been added or deleted.
+     This will produce new configuration.xml.
+
+When running the indexer the logs are being written to single file. Since
+multiple indexers are being run in parallel in step 2, their logs have to
+be separated. To do this, create logging.properties file for each project
+using the /var/opengrok/logging.properties file as template. The only line
+which can differ would be this:
+
+java.util.logging.FileHandler.pattern = /var/opengrok/log/myproj/opengrok%g.%u.log
+
+Note the path component 'myproj' which separates the logs for given
+project to this directory. The creation of the per-project directory and the
+logging.properties file can be easily done in a script.
+
+The command used in step 2 can look like this:
+
+  OPENGROK_LOGGER_CONFIG_PATH=/var/opengrok/myproj.logging \
+     READ_XML_CONFIGURATION=/var/opengrok/etc/configuration.xml \
+     OpenGrok indexpart /myproj
+
+The last argument is path relative to SRC_ROOT.
+
+5.3 Using SMF service (Solaris) to maintain OpenGrok indexes
 ------------------------------------------------------------
 
 If you installed OpenGrok from the OSOLopengrok package, it will work out of
@@ -260,12 +343,12 @@ Note: before removing the package please disable the service.
 If you don't do it, it will not be removed automatically.
 In such case please remove it manually.
 
-4.4 Using command line interface to create indexes
+5.4 Using command line interface to create indexes
 --------------------------------------------------
 
 There are 2 (or 3) steps needed for this task.
 
-4.4.1 - Populate DATA_ROOT Directory
+5.4.1 - Populate DATA_ROOT Directory
 ------------------------------------
 
 Option 1. OpenGrok: There is a sample shell script OpenGrok that is suitable
@@ -281,7 +364,7 @@ hypertext files generated by OpenGrok are to be stored in DATA_ROOT, run
 
 See opengrok.jar manual below for more details.
 
-4.4.2 - Configure and Deploy source.war Webapp
+5.4.2 - Configure and Deploy source.war Webapp
 ----------------------------------------------
 
 To configure the webapp source.war, look into the parameters defined in
@@ -292,14 +375,17 @@ web.xml of source.war file and change them (see note1) appropriately.
     * SRC_ROOT: absolute path name of the root directory of your source tree
     * DATA_ROOT: absolute path of the directory where OpenGrok data
                  files are stored
-       - Header file 'header_include' can be created under DATA_ROOT.
-	 The contents of this file file will be appended to the header of each
-	 web page after the OpenGrok logo element.
-       - Footer file 'footer_include' can be created under DATA_ROOT.
-	 The contents of this file file will be appended to the footer of each
-	 web page after the information about last index update.
 
-4.4.3 - Path Descriptions (optional)
+  - Header file 'header_include' can be created under DATA_ROOT.
+    The contents of this file file will be appended to the header of each
+    web page after the OpenGrok logo element.
+  - Footer file 'footer_include' can be created under DATA_ROOT.
+    The contents of this file file will be appended to the footer of each
+    web page after the information about last index update.
+  - The body of the home page can be changed by updating index_body.html
+    under the webapp directory.
+
+5.4.3 - Path Descriptions (optional)
 ------------------------------------
 
 OpenGrok can use path descriptions in various places (e.g. while showing
@@ -330,7 +416,7 @@ then the paths.tsv file contents can look like this:
 
 Note that only some paths can have a description.
 
-4.4.4 - Changing webapp parameters (optional)
+5.4.4 - Changing webapp parameters (optional)
 ---------------------------------------------
 
 web.xml is the deployment descriptor for the web application. It is in a Jar
@@ -355,7 +441,8 @@ file named source.war, you can change it as follows:
      Copy source.war to TOMCAT/webapps
 
      When invoking OpenGrok to build the index, use -w <webapp> to set the 
-     context.
+     context. If you change this(or set using OPENGROK_WEBAPP_CONTEXT) later, 
+     FULL clean reindex is needed.
 
      After the index is built, there's a couple different ways to set the
      Context for the servlet container:
@@ -379,7 +466,7 @@ file named source.war, you can change it as follows:
 
      This file will contain something like the Context described above.
 
-4.4.5 Custom ctags configuration
+5.4.5 Custom ctags configuration
 --------------------------------
 
 To make ctags recognize additional symbols/definitions/etc. it is possible to
@@ -394,7 +481,7 @@ the full path to the file will be /var/opengrok/etc/ctags.config).
 Sample configuration file for Solaris code base is delivered in the doc/
 directory.
 
-4.5 Using Java DB for history cache
+5.5 Using Java DB for history cache
 -----------------------------------
 
 By default OpenGrok stores history indexes in gzipped xml files. An alternative
@@ -404,7 +491,9 @@ History view will show a list of files modified with given change.
 On the other hand it consumes more system memory because the database has to
 run in background.
 
-You need Java DB 10.5.3 or later. To install it peform the following steps:
+Versions of Java DB from 10.5.3 to 10.8.3.0 are known to work.
+Java DB 10.10.x.y versions are known to NOT work.
+To install it perform the following steps:
 
 Solaris 11:
 
@@ -412,8 +501,11 @@ Solaris 11:
 
 Debian/Ubuntu:
 
-  # apt-get install sun-java6-javadb
+  # apt-get install libderby-java
 
+Other:
+
+  Fetch the db-derby bundle from db.apache.org, and unpack to your preferred path.
 
 1) Start the server:
 
@@ -485,8 +577,18 @@ the JavaDB data directory and add this line to it:
     # echo "derby.storage.pageCacheSize=25000" >> \
           /var/lib/javadb/data/derby.properties
 
+5.6 Introduce own mapping for an extension to analyzer
+------------------------------------------------------
 
-5. Optional Command Line Interface Usage
+OpenGrok script doesn't support this out of box, so you'd need to add it there.
+Usually to StdInvocation() function after line -jar ${OPENGROK_JAR} .
+It would look like this:
+-A cs:org.opensolaris.opengrok.analysis.PlainAnalayzer 
+(this will map extension .cs to PlainAnalyzer) 
+You should even be able to override OpenGroks analyzers using this option.
+
+
+6. Optional Command Line Interface Usage
 ----------------------------------------
 
 You need to pass location of project file + the query to Search class, e.g.
@@ -500,7 +602,7 @@ do:
 
   $ java -cp ./opengrok.jar org.opensolaris.opengrok.search.Search
 
-6. Change web application properties or name
+7. Change web application properties or name
 --------------------------------------------
 
 You might need to modify the web application if you don't store the
@@ -524,7 +626,8 @@ more options, refer to manual or read param comments).
 
 If you need to change name of the web application from source to something
 else you need to use special option -w <new_name> for indexer to create
-proper xrefs, besides changing the .war file name. Examples below show just
+proper xrefs, besides changing the .war file name. Be sure that when this
+changed you reindex cleanly from scratch. Examples below show just
 deploying source.war, but you can use it to deploy your new_name.war too.
 
 Deploy the modified .war file in glassfish/Sun Java App Server:
@@ -546,7 +649,7 @@ Deploy the modified .war file in tomcat:
 
   * just copy the source.war file to TOMCAT_INSTALL/webapps directory.
 
-7. OpenGrok systray
+8. OpenGrok systray
 -------------------
 
 The indexer can be setup with agent and systray GUI control application.
@@ -572,10 +675,10 @@ localhost, but rather on a physical network interface).
 
 This agent is work in progress, so it might not fully work.
 
-8. Information for developers
+9. Information for developers
 -----------------------------
 
-8.0 Building
+9.0 Building
 ------------
 
 Just run 'ant' from command line in the top-level directory or use build
@@ -585,25 +688,20 @@ Note: in case you are behind http proxy, use ANT_OPTS to download jflex, lucene
 E.g. $ ANT_OPTS="-Dhttp.proxyHost=?.? -Dhttp.proxyPort=80" ant
 
 
-8.0.1 Package build
+9.0.1 Package build
 -------------------
 
 Run 'ant package' to create package (specific for the operating system this is
 being executed on) under the dist/ directory.
 
-8.1 Unit testing
+9.1 Unit testing
 ----------------
 
 Note: For full coverage report your system has to provide proper junit test 
 environment, that would mean:
 
-  - you have to use Ant 1.7 and above
-  - at least junit-4.10.jar has to be in ant's classpath (e.g. in ./lib)
-    - Example install in the top of the opengrok repository:
-
-      $ cd lib
-      $ wget http://.../junit-4.10.jar
-      $ jar -xf junit-4.10.jar
+  - you have to use Ant 1.9 and above
+  - at least junit-4.12.jar has to be in ant's classpath (e.g. in ./lib)    
 
   - install derby.jar to ant's classpath so that Java DB tests can be run
   - your PATH must contain directory with exuberant ctags binary
@@ -620,7 +718,7 @@ The tests are then run as follows:
 To check if the test completed without error look for AssertionFailedError
 occurences in the TESTS-TestSuites.xml file produced by the test run.
 
-8.2 Using Findbugs
+9.2 Using Findbugs
 ------------------
 
 If you want to run Findbugs (http://findbugs.sourceforge.net/) on OpenGrok,
@@ -655,77 +753,40 @@ under the lib directory):
 There is also a findbugs-xml ant target that can be used to generate XML files
 that can later be parsed, e.g. by Jenkins.
 
-8.3 Using Emma
+9.3 Using Jacoco
 --------------
 
-If you want to check test coverage on OpenGrok, download Emma from
-http://emma.sourceforge.net/. Place emma.jar and emma-ant.jar in the
-opengrok/trunk/lib directory, or ~/.ant/lib.
+If you want to check test coverage on OpenGrok, download jacoco from
+http://www.eclemma.org/jacoco/. Place jacocoagent.jar and jacocoant.jar in the
+opengrok/lib ~/.ant/lib or into classpath (-lib option of ant).
 
-Now you can instrument your classes, and create a jar file:
+Now you can instrument your classes and test them run:
 
-  $ ant emma-instrument
+  $ ant -Djacoco=true -Djacoco.home=/<path_to>/jacoco jacoco-code-coverage
 
-If you are using NetBeans, select File - "opengrok" Properties 
-- libraries - Compile tab. Press the "Add JAR/Folder" and select
-lib/emma.jar and lib/emma_ant.jar
+Now you should get output data in jacoco.exec
 
-If you are not using netbeans, you have to edit the file 
-nbproject/project.properties, and add "lib/emma.jar" and 
-"lib/emma_ant.jar" to the javac.classpath inside it.
+Look at jacoco/index.html to see how complete your tests are.
 
-Now you can put the classes into jars and generate distributable:
-
-  $ ant dist
-
-The classes inside opengrok.jar should now be instrumented.
-If you use opengrok.jar for your own set of tests, you need 
-emma.jar in the classpath.If you want to specify where to store 
-the run time analysis, use these properties:
-
-   emma.coverage.out.file=path/coverage.ec
-   emma.coverage.out.merge=true
-
-The coverage.ec file should be placed in the opengrok/trunk/coverage
-directory for easy analyze.
-
-If you want to test the coverage of the unit tests, you can
-run the tests:
-
-   $ ant test   
-   
-Alternatively press Alt+F6 in NetBeans to achieve the same.
-
-Now you should get some output saying that Emma is placing runtime 
-coverage data into coverage.ec.
-
-To generate reports, run ant again:
-
-  $ ant emma-report
-
-Look at coverage/coverage.txt, coverage/coverage.xml and 
-coverage/coverage.html to see how complete your tests are.
-
-8.4 Using Checkstyle
+9.4 Using Checkstyle
 --------------------
 
 To check that your code follows the standard coding conventions,
 you can use checkstyle from http://checkstyle.sourceforge.net/
 
 First you must download checkstyle from http://checkstyle.sourceforge.net/ ,
-You need Version 5.3 (or newer). Extract the package you have
+You need Version 6.8 (or newer). Extract the package you have
 downloaded, and create a symbolic link to it from ~/.ant/lib/checkstyle,
 e.g. like this:
 
    $ cd ~/.ant/lib
-   $ unzip ~/Desktop/checkstyle-5.3.zip
-   $ ln -s checkstyle-5.3 checkstyle
+   $ unzip ~/Desktop/checkstyle-6.8.zip
+   $ ln -s checkstyle-6.8 checkstyle
 
 You also have to create symbolic links to the jar files:
 
-   $ cd checkstyle
-   $ ln -s checkstyle-5.3.jar checkstyle.jar
-   $ ln -s checkstyle-all-5.3.jar checkstyle-all.jar
+   $ cd checkstyle   
+   $ ln -s checkstyle-6.8-all.jar checkstyle-all.jar
 
 To run checkstyle on the source code, just run ant checkstyle:
 
@@ -740,7 +801,7 @@ checkstyle under the lib directory):
 
   $ ant checkstyle -Dcheckstyle.home=lib/checkstyle
 
-8.5 Using PMD and CPD
+9.5 Using PMD and CPD
 ---------------------
 
 To check the quality of the OpenGrok code you can also use PMD
@@ -749,21 +810,14 @@ from http://pmd.sourceforge.net/.
 How to install:
 
   $ cd ~/.ant/lib
-  $ unzip ~/Desktop/pmd-bin-5.0.0.zip
-  $ ln -s pmd-5.0.0/ pmd
+  $ unzip ~/Desktop/pmd-bin-5.2.3.zip
+  $ ln -s pmd-5.2.3/ pmd
 
-You also have to make links to the jar files:
+To run PMD on the source code, just run ant pmd:
 
-  $ cd ~/.ant/lib/pmd/lib
-  $ ln -s pmd-5.0.0.jar pmd.jar
-  $ ln -s jaxen-1.1.1.jar jaxen.jar
-  $ ln -s asm-3.2.jar asm.jar
+  $ ant -Dpmd.home=~/.ant/lib/pmd pmd
 
-To run PMD on the rource code, just run ant pmd:
-
-  $ ant pmd
-
-Outout from the command will be stored in the pmd subdirectory:
+Output from the command will be stored in the pmd subdirectory:
 
   $ ls pmd
   pmd_report.html  pmd_report.xml
@@ -771,20 +825,20 @@ Outout from the command will be stored in the pmd subdirectory:
 If you want to install PMD some other place than ~/.ant/lib, you can
 unzip the .zip file to a directory, and use the pmd.home property
 to tell ant where to find PMD, like this (if you have installed 
-PMD under the lib directory):
+PMD under the ./ext_lib directory):
 
-  $ ant pmd -Dpmd.home=lib/pmd-5.0.0
+  $ ant pmd -Dpmd.home=ext_lib/pmd
 
 To run CPD, just use the same as above, but use targets:
 
-  $ ant cpd cpd-xml
+  $ ant -Dpmd.home=ext_lib/pmd cpd cpd-xml
 
 Which will result in:
 
   $ ls pmd
   cpd_report.xml cpd_report.txt
 
-8.6 Using JDepend
+9.6 Using JDepend
 -----------------
 
 To see dependencies in the source code, you can use JDepend from
@@ -807,7 +861,29 @@ Output is stored in the jdepend directory:
   $ ls jdepend/
   report.txt  report.xml
 
-9. Tuning OpenGrok for large code bases
+9.7 Using SonarQube
+-------------------
+
+Use a sonar runner with included sonar-project.properties properties, 
+e.g. using bash:
+
+  $ cd <checkout_dir> # it has to contain sonar-project.properties!
+  $ export SONAR_RUNNER_OPTS="-Xmx768m -XX:MaxPermSize=256m"
+  $ export SERVERIP=10.163.26.78
+  $ ~//Projects/sonar-runner-2.3/bin/sonar-runner \
+    -Dsonar.host.url=http://${SERVERIP}:9000 
+    -Dsonar.jdbc.url=jdbc:h2:tcp://${SERVERIP}:9092/sonar
+
+9.8 Using Travis CI
+-------------------
+
+Travis depends on updated and working maven build.
+Please see .travis.yml, if your branch has this file,
+you should be able to connect your Github to Travis CI.
+OpenGroks Travis is here: https://travis-ci.org/OpenGrok/OpenGrok
+
+
+10. Tuning OpenGrok for large code bases
 ---------------------------------------
 
 While indexing big source repos you might consider using ZFS filesystem to give 
@@ -864,8 +940,13 @@ the project list when requesting search results):
 
 Refer to docs of other containers for more info on how to achieve the same.
 
+The same tuning to Apache can be done with the LimitRequestLine directive:
 
-10. Authors
+  LimitRequestLine 65536
+  LimitRequestFieldSize 65536
+
+
+11. Authors
 -----------
 
 The project has been originally conceived in Sun Microsystems by Chandan B.N.
@@ -878,7 +959,7 @@ Knut Anders Hatlen, Oracle. http://blogs.oracle.com/kah/
 Lubos Kosco, Oracle. http://blogs.oracle.com/taz/
 Vladimir Kotal, Oracle. http://blogs.oracle.com/vlad/
 
-11. Contact us
+12. Contact us
 --------------
 
 Feel free to participate in discussion on discuss@opengrok.java.net.
